# Proof-of-agreement

./: Cargo.toml  README.md  dfx.json  did.sh  package-lock.json  package.json
src/frontend/: package-lock.json
src/pok_backend/: Cargo.toml  pok_backend.did
src/pok_backend/src/: lib.rs
src/pok_backend/src/agreement/: mod.rs
src/pok_backend/src/helpers/: mod.rs
src/pok_backend/src/lamport/: mod.rs
src/pok_backend/src/signature/: mod.rs
src/pok_backend/src/user/: mod.rs
