[package]
name = "pok_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-stable-structures = "0.5.6"




sha256 = { version = "1.5.0", default-features = false }

sha2 = { version = "0.9", default-features= false }

hex ={ version= "0.4.3", default-features= false }

chrono = { version= "0.4.38", default-features= false,  features = ["now"]}